--- a/dags/vocab_utils/test.ipynb
+++ b/dags/vocab_utils/test.ipynb
@@ -723,6 +723,134 @@
    "source": [
     "df.to_sql('my_vocabs', con=con, if_exists='replace', index=False)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Flask APP Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message sent successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "webhook_url = \"https://hooks.slack.com/services/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\"\n",
+    "payload = {\n",
+    "    \"text\": \"Hello, World!\"\n",
+    "}\n",
+    "\n",
+    "response = requests.post(webhook_url, json=payload)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    print(\"Message sent successfully.\")\n",
+    "else:\n",
+    "    print(f\"Error sending message. Status code: {response.status_code}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 404\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "# Make a GET request to the /payloads endpoint\n",
+    "response = requests.get('http://199.241.139.206:8080/payloads')\n",
+    "\n",
+    "# Check if the request was successful (status code 200)\n",
+    "if response.status_code == 200:\n",
+    "    # Extract the payloads from the response\n",
+    "    payloads = response.json()\n",
+    "    print(payloads)\n",
+    "\n",
+    "    # Process the payloads as needed\n",
+    "    for payload in payloads:\n",
+    "        # Extract the necessary data from the payload\n",
+    "        text = payload.get('message', {}).get('text', '')\n",
+    "        button_clicked = payload.get('actions', [{}])[0].get('text', {}).get('text', '')\n",
+    "        timestamp = payload.get('actions', [{}])[0].get('action_ts', '')\n",
+    "        user = payload.get('user', {}).get('username', '')\n",
+    "\n",
+    "        # Process the extracted data\n",
+    "        print(f\"Text: {text}\")\n",
+    "        print(f\"Button Clicked: {button_clicked}\")\n",
+    "        print(f\"Timestamp: {timestamp}\")\n",
+    "        print(f\"User: {user}\")\n",
+    "else:\n",
+    "    # Request was not successful, handle the error\n",
+    "    print(f\"Error: {response.status_code}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "<!DOCTYPE html>\n",
+      "<html lang=\"en\">\n",
+      "  <head>\n",
+      "    <title>Airflow 404</title>\n",
+      "    <link rel=\"icon\" type=\"image/png\" href=\"/static/pin_32.png\">\n",
+      "  </head>\n",
+      "  <body>\n",
+      "    <div style=\"font-family: verdana; text-align: center; margin-top: 200px;\">\n",
+      "      <img src=\"/static/pin_100.png\" width=\"50px\" alt=\"pin-logo\" />\n",
+      "      <h1>Airflow 404</h1>\n",
+      "      <p>Page cannot be found.</p>\n",
+      "      <a href=\"/\">Return to the main page</a>\n",
+      "      <p>redact</p>\n",
+      "    </div>\n",
+      "  </body>\n",
+      "</html>\n",
+      "Failed to connect to the Flask app.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "# Set the URL of your Flask app\n",
+    "url = 'http://199.241.139.206:8080/payloads'\n",
+    "\n",
+    "# Make a GET request to your Flask app\n",
+    "response = requests.get(url)\n",
+    "print(response.text)\n",
+    "# Check the response status code\n",
+    "if response.status_code == 200:\n",
+    "    # Print the response content\n",
+    "    print(response.text)\n",
+    "else:\n",
+    "    print('Failed to connect to the Flask app.')\n"
+   ]
   }
  ],
  "metadata": {
