feat: interactive feature implemented

--- a/dags/vocab_utils/test.ipynb
+++ b/dags/vocab_utils/test.ipynb
@@ -763,45 +763,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: 404\n"
+      "[{'actions': [{'action_id': 'I=OPU', 'action_ts': '1687659478.915839', 'block_id': 'Dx8', 'text': {'emoji': True, 'text': ':+1:', 'type': 'plain_text'}, 'type': 'button', 'value': 'not_confident'}], 'api_app_id': 'A02V70E9P38', 'channel': {'id': 'C02VDLCB52N', 'name': 'vocab_practice'}, 'container': {'channel_id': 'C02VDLCB52N', 'is_ephemeral': False, 'message_ts': '1687659475.390139', 'type': 'message'}, 'enterprise': None, 'is_enterprise_install': False, 'message': {'blocks': [{'block_id': 'Ptf', 'text': {'text': '*Vocabulary:* Timid', 'type': 'mrkdwn', 'verbatim': False}, 'type': 'section'}, {'block_id': 'Dx8', 'elements': [{'action_id': 'D/kJ', 'text': {'emoji': True, 'text': ':-1:', 'type': 'plain_text'}, 'type': 'button', 'value': 'confident'}, {'action_id': 'HJs', 'text': {'emoji': True, 'text': ':neutral_face:', 'type': 'plain_text'}, 'type': 'button', 'value': 'neutral'}, {'action_id': 'I=OPU', 'text': {'emoji': True, 'text': ':+1:', 'type': 'plain_text'}, 'type': 'button', 'value': 'not_confident'}], 'type': 'actions'}], 'bot_id': 'B05E5SLNQGL', 'subtype': 'bot_message', 'text': '*Vocabulary:* Timid 👎 button 😐 button 👍 button', 'ts': '1687659475.390139', 'type': 'message'}, 'response_url': 'https://hooks.slack.com/actions/T01MB5Z619S/5492098866513/qr5avqE8nipmhu3T23pNA1t2', 'state': {'values': {}}, 'team': {'domain': 'andy-sb74228', 'id': 'T01MB5Z619S'}, 'token': 'wnlwwEEjoLYbQWJ1RgDDgSGn', 'trigger_id': '5464934035623.1725203205332.0108e5317aaf4f36344592e9b0ae21ab', 'type': 'block_actions', 'user': {'id': 'U01LY7PF86S', 'name': 'anddy0622', 'team_id': 'T01MB5Z619S', 'username': 'anddy0622'}}, {'actions': [{'action_id': 'XO6B', 'action_ts': '1687660315.108641', 'block_id': 'mGAT', 'text': {'emoji': True, 'text': 'Memorized :star-struck:', 'type': 'plain_text'}, 'type': 'button', 'value': 'memorized'}], 'api_app_id': 'A02V70E9P38', 'channel': {'id': 'C02VDLCB52N', 'name': 'vocab_practice'}, 'container': {'channel_id': 'C02VDLCB52N', 'is_ephemeral': False, 'message_ts': '1687660298.344369', 'type': 'message'}, 'enterprise': None, 'is_enterprise_install': False, 'message': {'blocks': [{'block_id': '7NE6', 'text': {'text': '*Vocabulary:* Timid', 'type': 'mrkdwn', 'verbatim': False}, 'type': 'section'}, {'block_id': 'mGAT', 'elements': [{'action_id': 'XO6B', 'text': {'emoji': True, 'text': 'Memorized :star-struck:', 'type': 'plain_text'}, 'type': 'button', 'value': 'memorized'}], 'type': 'actions'}], 'bot_id': 'B05E5SLNQGL', 'subtype': 'bot_message', 'text': '*Vocabulary:* Timid Memorized 🤩 button', 'ts': '1687660298.344369', 'type': 'message'}, 'response_url': 'https://hooks.slack.com/actions/T01MB5Z619S/5464946619399/e7sju43N0vzQznN2TW8xHIWV', 'state': {'values': {}}, 'team': {'domain': 'andy-sb74228', 'id': 'T01MB5Z619S'}, 'token': 'wnlwwEEjoLYbQWJ1RgDDgSGn', 'trigger_id': '5481918124612.1725203205332.9a18b82afbf2d205cc884d71c44d8571', 'type': 'block_actions', 'user': {'id': 'U01LY7PF86S', 'name': 'anddy0622', 'team_id': 'T01MB5Z619S', 'username': 'anddy0622'}}]\n",
+      "Vocab: Timid\n",
+      "Text: *Vocabulary:* Timid 👎 button 😐 button 👍 button\n",
+      "Button Clicked: :+1:\n",
+      "Timestamp: 1687659478.915839\n",
+      "User ID: C02VDLCB52N\n",
+      "Vocab: Timid\n",
+      "Text: *Vocabulary:* Timid Memorized 🤩 button\n",
+      "Button Clicked: Memorized :star-struck:\n",
+      "Timestamp: 1687660315.108641\n",
+      "User ID: C02VDLCB52N\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/3y/wlmb_w797cv7ds4bjb5pgmp80000gn/T/ipykernel_26262/3708072466.py:39: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append({'vocab': vocab, 'text': text, 'button_clicked': button_clicked, 'timestamp': timestamp, 'user_id': user_id}, ignore_index=True)\n",
+      "/var/folders/3y/wlmb_w797cv7ds4bjb5pgmp80000gn/T/ipykernel_26262/3708072466.py:39: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append({'vocab': vocab, 'text': text, 'button_clicked': button_clicked, 'timestamp': timestamp, 'user_id': user_id}, ignore_index=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "import requests\n",
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine, text\n",
     "\n",
     "# Make a GET request to the /payloads endpoint\n",
-    "response = requests.get('http://199.241.139.206:8080/payloads')\n",
-    "\n",
+    "response = requests.get('http://199.241.139.206:5001/payloads')\n",
+    "db_uri = \"postgresql://postgres:vocab2023!@199.241.139.206:5432/vocab_storage\"\n",
+    "con = create_engine(db_uri).connect()\n",
     "# Check if the request was successful (status code 200)\n",
     "if response.status_code == 200:\n",
     "    # Extract the payloads from the response\n",
     "    payloads = response.json()\n",
     "    print(payloads)\n",
     "\n",
+    "    df = pd.DataFrame(columns=['vocab', 'text', 'button_clicked', 'timestamp', 'user_id'])\n",
+    "    \n",
     "    # Process the payloads as needed\n",
     "    for payload in payloads:\n",
     "        # Extract the necessary data from the payload\n",
+    "        vocab = payload.get('message', {}).get('blocks', [{}])[0].get('text', {}).get('text', '')\n",
+    "        vocab = vocab.split(\"* \")[1]\n",
     "        text = payload.get('message', {}).get('text', '')\n",
     "        button_clicked = payload.get('actions', [{}])[0].get('text', {}).get('text', '')\n",
     "        timestamp = payload.get('actions', [{}])[0].get('action_ts', '')\n",
-    "        user = payload.get('user', {}).get('username', '')\n",
+    "        user_id = payload.get('channel', {}).get('id', '')\n",
+    "        \n",
     "\n",
     "        # Process the extracted data\n",
+    "        print(f\"Vocab: {vocab}\")\n",
     "        print(f\"Text: {text}\")\n",
     "        print(f\"Button Clicked: {button_clicked}\")\n",
     "        print(f\"Timestamp: {timestamp}\")\n",
-    "        print(f\"User: {user}\")\n",
+    "        print(f\"User ID: {user_id}\")\n",
+    "\n",
+    "        # Check if the timestamp is greater than June 25, 2023\n",
+    "        # Check if the timestamp is greater than June 25, 2023\n",
+    "        if float(timestamp) > 1675286400.0:\n",
+    "            # make a dataframe\n",
+    "            df = df.append({'vocab': vocab, 'text': text, 'button_clicked': button_clicked, 'timestamp': timestamp, 'user_id': user_id}, ignore_index=True)\n",
+    "        \n",
     "else:\n",
     "    # Request was not successful, handle the error\n",
-    "    print(f\"Error: {response.status_code}\")\n"
+    "    print(f\"Error: {response.status_code}\")\n",
+    "df = pd.DataFrame(columns=['vocab', 'text', 'button_clicked', 'timestamp', 'user_id'])\n",
+    "df.to_sql('memorized_vocabs', con=con, if_exists='replace', index=False)"
    ]
   },
   {
@@ -839,7 +888,7 @@
     "import requests\n",
     "\n",
     "# Set the URL of your Flask app\n",
-    "url = 'http://199.241.139.206:8080/payloads'\n",
+    "url = 'http://199.241.139.206:5001/payloads'\n",
     "\n",
     "# Make a GET request to your Flask app\n",
     "response = requests.get(url)\n",
